Record assigned frequencies in the server. Remember created stations in the browser. Add forward / back support.